deploy/k8s/svc-medical-record/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-medical-record
spec:
  selector:
    app: svc-medical-record
  ports:
    - port: 80
      targetPort: 8085
