deploy/k8s/svc-medical-record/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: svc-medical-record-ingress
spec:
  podSelector:
    matchLabels:
      app: svc-medical-record
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - protocol: TCP
          port: 8085
